--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ahmad Jarif Yeasir"
-  avatar           : "profile.png"
+  avatar           : "Ahmad Jarif Yeasir.jpg"
   bio              : "Prospective ECE Grad Applicant, Fall 24"
   #location         : "Location"
   employer         :
